chore(updatecli) hot-fixup of ee1af38bae77eea534fb300741c1d602467f8a49
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/updatecli.d/terraform-providers/azuread.yaml
+++ b/updatecli/updatecli.d/terraform-providers/azuread.yaml
@@ -41,6 +41,7 @@ actions:
     kind: github/pullrequest
     scmid: default
     spec:
+      title: Bump Terraform `azuread` provider version to {{ source "lastVersion" }}
       labels:
         - terraform-providers
         - hashicorp/azuread
