--- a/updatecli/updatecli.d/terraform-providers/azurerm.yaml
+++ b/updatecli/updatecli.d/terraform-providers/azurerm.yaml
@@ -41,6 +41,7 @@ actions:
     kind: github/pullrequest
     scmid: default
     spec:
+      title: Bump Terraform `azurerm` provider version to {{ source "lastVersion" }}
       labels:
         - terraform-providers
         - hashicorp/azurerm
