--- a/updatecli/updatecli.d/aws-dns-ns.yaml
+++ b/updatecli/updatecli.d/aws-dns-ns.yaml
@@ -19,18 +19,17 @@ sources:
     spec:
       file: https://reports.jenkins.io/jenkins-infra-data-reports/aws-sponsorship.json
       key: aws\.ci\.jenkins\.io.name_servers
-
-targets:
-  updateNSRecord:
-    name: Update NS records for aws.ci.jenkins.io
-    kind: hcl
-    sourceid: getAwsCiJenkinsIoNameServers
     transformers:
       - replacers:
           - from: '['
             to: ''
           - from: ']'
             to: ''
+
+targets:
+  updateNSRecord:
+    name: Update NS records for aws.ci.jenkins.io
+    kind: hcl
     spec:
       file: ./dns.tf
       path: locals.aws_route53_nameservers_awscijenkinsio
@@ -40,8 +39,8 @@ actions:
   default:
     kind: github/pullrequest
     scmid: default
+    title: feat(dns) Update NS records for aws.ci.jenkins.io to `{{ source "getAwsCiJenkinsIoNameServers" }}`
     spec:
-      title: Update NS records for aws.ci.jenkins.io to {{ source "getAwsCiJenkinsIoNameServers" }}
       description: |
         A new set of Name Servers for the AWS Route 53 delegated zone for `aws.ci.jenkins.io` were detected in <https://reports.jenkins.io/jenkins-infra-data-reports/aws-sponsorship.json>.
         This PR updates the `NS` records with the new detected values.
